# Time_Warp

./: .gitignore  .spellcheck.yml  .wordlist.txt  CHANGELOG.md  COMING_SOON_FEATURES_IMPLEMENTED.md  CONTRIBUTING.md  Cargo.toml  DEMO_GAMES.md  DIRECTORY_STRUCTURE.md  GITHUB_INTEGRATION.md  JAMES.code-workspace  JAMES.py  JAMES_streamlined.py  JTC_FILE_CONVENTION.md  MACOS_BUILD_SUCCESS.md  MANIFEST.in  MODULAR_ARCHITECTURE.md  PILOT_EXTENDED_COMMANDS.md  README.md  README_v101.md  README_v11.md  REDDIT_SIDEPROJECT_ANNOUNCEMENT.md  RELEASE_1_1_SUMMARY.md  THEME_SELECTOR_COMING_SOON_FIX.md  TimeWarp.code-workspace  TimeWarp.py  TimeWarp_v101.py  TimeWarp_v11.py  Time_Warp  Time_Warp.code-workspace  Time_Warp.py  Time_Warp.spec  Time_Warp_IDE_v1.2.0.spec  Time_Warp_IDE_v1.2.0_console.spec  Time_Warp_II.py  Time_Warp_macOS.spec  Tinme_Warp_II  UPDATE_RELEASE_GUIDE.md  basic_compiler.py  benchmark_results.json  (+116 more)
.diagnostics/: local_flush_probe.py  run_ui_probe.py
.github/: copilot-instructions.md
.mypy_cache/: missing_stubs
GW-BASIC/: GW BASIC Parse Rules.txt.rtf  technical.txt
Time_Warp_II/: Cargo.toml  comprehensive_demo.twb  test_basic.rs  test_pilot_input.pilot  test_prolog.tpr  test_prolog_simple.rs  test_tab_spc.twb
archive/: README.md
compilers/: __init__.py  __init__.py.backup  base.py  basic_compiler.py  logo_compiler.py  pilot_compiler.py
core/: __init__.py  compiler.py  enhanced_error_handler.py  framework.py  interpreter.py
docs/: CHANGELOG.md  COMING_SOON_FEATURES_IMPLEMENTED.md  DEMO_GAMES.md  DIRECTORY_STRUCTURE.md  GITHUB_INTEGRATION.md  (+6 more)
(+843 files in other folders)
